# deck-share-screenshot

./: .gitignore  Cargo.toml  README.md  app.py  client.py  create_desktop.sh  install_deps.sh  pack.sh  requirements.txt  run.sh  server.py  sharess.desktop  sharess.glade  sharess.py
src/: app.rs  client.rs  main.rs  server.rs  ui.rs
