[package]
name = "sharess"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
dotenv = "0.15.0"
glob = "0.3.1"
iced = { version = "0.9.0", features = ["image", "qr_code", "tokio"] }
iced_aw = { git = "https://github.com/gitcrtn/iced_aw", branch = "move-index-selection-list" }
iced_native = "0.10.3"
local-ip-address = "0.5.1"
portpicker = "0.1.1"
reqwest = "0.11.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features = ["v4"] }
warp = "0.3.5"
